--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ body{
 	color: var(--white-color);
 } */
 .link{
-	color: var(--black-color);
+	color: var(--white-color) !important;
 }
 .link:hover{
 	color: var(--primary-color);
@@ -316,3 +316,30 @@ a.nav-link:hover {
 .carousel-inner .carousel-item-prev {
     display: flex;
 }
+
+/* Map */
+.map iframe {
+    width: 100% !important;
+    height: 600px !important;
+}
+
+/* Popup Form */
+/* The popup form - hidden by default */
+.form-popup {
+	display: none;
+	position: fixed;
+	top:100px;
+	right: 20px;
+	left: 260px;
+	/* border: 3px solid #f1f1f1; */
+	z-index: 99;
+  }
+  
+  /* Add styles to the form container */
+  .form-container {
+	max-width: 800px;
+	padding: 10px;
+	background-color: white;
+	text-align: center;
+  }
+  
