--- a/style.css
+++ b/style.css
@@ -272,15 +272,25 @@ a.dropdown-item:hover {
 
 /* End Counter */
 .counter{
-    content: "";
     width: 100%;
     background-image: url('img/bg1.jpg');
 	background-size: cover;
     background-attachment: fixed;
+	position: relative;
 }
-.counter::before{
-    opacity: .7;
-	background-color: #000;
+.counter::before {
+    content: "";
+    background-color: rgb(0 0 0 / 50%);
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+	opacity: .7;
+}
+.counter .row.text-center.pt-80.pb-80 {
+    position: relative;
+    z-index: 99;
 }
 
 
@@ -352,3 +362,43 @@ a.dropdown-item:hover {
 }
 
 /* Popup Form */
+body {font-family: Arial, Helvetica, sans-serif;}
+* {box-sizing: border-box;}
+
+/* Button used to open the contact form - fixed at the bottom of the page */
+.open-button {
+  color: white;
+  border: none;
+  cursor: pointer;
+  opacity: 0.8;
+ 
+}
+
+  /* The popup form - hidden by default */
+  .form-popup {
+	display: none;
+	position: fixed;
+	top:100px;
+	right: 20px;
+	left: 260px;
+	z-index: 99;
+  }
+  
+  /* Add styles to the form container */
+  .form-container {
+	max-width: 800px;
+	padding: 10px;
+	background-color: white;
+	text-align: center;
+  }
+
+
+/* Add a red background color to the cancel button */
+.form-container .cancel {
+  background-color: red;
+}
+
+/* Add some hover effects to buttons */
+.form-container .btn:hover, .open-button:hover {
+  opacity: 1;
+}
