--- a/css/responsive.css
+++ b/css/responsive.css
@@ -7,10 +7,19 @@
     .overly1 {
         width: 90%;
     }
+
+    /* Popup form */
+    .form-popup {
+        left: 403px;
+    }
 }
 
 @media (max-width: 1499.98px) {
-    
+   
+     /* Popup form */
+     .form-popup {
+        left: 310px;
+    }
 }
 
 @media (max-width: 1399.98px) {
@@ -18,12 +27,22 @@
    .overly1 {
     width: 88%;
 }
+
+ /* Popup form */
+ .form-popup {
+    left: 285px;
+}
 }
 
 @media (max-width: 1299.98px) {
     .overly1 {
         width: 86%;
     }
+
+     /* Popup form */
+ .form-popup {
+    left: 259px;
+}
 }
 
 @media (max-width: 1199.98px) {
@@ -32,6 +51,10 @@
         font-size: 38px;
     }
    
+     /* Popup form */
+ .form-popup {
+    left: 205px;
+}
 }
 
 
@@ -60,6 +83,14 @@
     .overly1 h5{
             font-size: 15px;
     }
+
+    /* Popup Form */
+    .form-popup {
+        left: 90px;
+    }
+    .form-container {
+        max-width: 582px;
+    }
 }
 
 @media (max-width: 768px) {
@@ -71,6 +102,11 @@
 
     .carousel-inner .ww>div:first-child {
         display: block;
+    }
+
+    /* Popup Form */
+    .form-popup {
+        left: 18px;
     }
     
 }
@@ -122,6 +158,10 @@
     .overly1 {
         width: 87%;
     }
+/* Popup FOrm */
+    .form-popup {
+        left: -9px;
+    }
 }
 
 @media (max-width: 600px) {
@@ -142,6 +182,11 @@
     /* Home Title */
     h2 {
         font-size: 25px;
+    }
+
+    /* Popup Form */
+    .form-container {
+        max-width: 437px;
     }
 }
 @media (max-width:575.98px){
@@ -176,12 +221,21 @@
     line-height: 1;
     letter-spacing: 1px;
 }
+ /* Popup Form */
+ .form-container {
+    max-width: 340px;
+}
 
 }
 @media (max-width: 359.98px) {
    /* Home Our team */
    .overly1 {
     width: 89%;
+}
+
+ /* Popup Form */
+ .form-container {
+    max-width: 260px;
 }
 }
 
@@ -194,4 +248,9 @@
     .sec-title2 {
         font-size: 16px;
     }
+
+    /* Popup Form */
+ .form-container {
+    max-width: 220px;
+}
    }
