--- a/style.css
+++ b/style.css
@@ -52,10 +52,9 @@ body{
 .btn-secondery{
 	color: var(--primary-color);
 }
-/* .btn-secondery:hover{
-	background: var(--black-color);
-	color: var(--white-color);
-} */
+.btn-secondery:hover{
+	color: var(--black-color);
+}
 .link{
 	color: var(--white-color) !important;
 }
@@ -88,27 +87,13 @@ ul{
 	padding: 0;
 	list-style: none;
 }
+i:hover{
+	color: var(--primary-color);
+}
 a{
 	text-decoration: none;
 }
 a:focus{
-	outline: none;
-}
-textarea, input {
-	box-sizing: border-box;
-	width: 100%;
-	border: none;
-	padding: 5px 20px !important;
-	color: var(--black-color);
-	background: var(--white-color);
-}
-textarea:focus{
-	outline: none;
-}
-input {
-	height: 50px;
-}
-input:focus{
 	outline: none;
 }
 .bg {
@@ -162,17 +147,6 @@ input:focus{
 a.nav-link:hover {
 	color: #FF5E14 !important;
 }
-.sec-title h2::before {
-    content: "";
-    position: absolute;
-    left: 0;
-    width: 60px;
-    height: 2px;
-    background: #ff5e14;
-    bottom: -25px;
-    right: 0;
-    margin: auto;
-}
 
 /* Header Sect */
 .dropdown-menu {
@@ -209,6 +183,7 @@ a.dropdown-item:hover {
     background: #000;
     opacity: .7;
 }
+
 .mainslide .carousel-caption{
 	animation-name: example;
 	animation-duration: 2s;  
@@ -219,8 +194,7 @@ a.dropdown-item:hover {
 	from {top: 0px;}
 	to {top: 250px;}
   }
-
-
+  
 /*Project*/
 .overly {
   position: relative;
@@ -236,7 +210,7 @@ a.dropdown-item:hover {
   bottom: 0;
   left: 0;
   right: 0;
-  background: #222222;
+/*  background-color: #008CBA;*/
   overflow: hidden;
   opacity: 1;
   width: 100%;
@@ -251,9 +225,10 @@ a.dropdown-item:hover {
 
 
 .overly:hover .middle {
--webkit-transform: scale(1);
--ms-transform: scale(1);
- transform: scale(.8);
+	background: #222222;
+  -webkit-transform: scale(1);
+  -ms-transform: scale(1);
+  transform: scale(.8);
 }
 .text {
   color: white;
@@ -268,9 +243,6 @@ a.dropdown-item:hover {
 }
 
 /*Start Counter */
-
-
-/* End Counter */
 .counter{
     width: 100%;
     background-image: url('img/bg1.jpg');
@@ -280,19 +252,19 @@ a.dropdown-item:hover {
 }
 .counter::before {
     content: "";
-    background-color: rgb(0 0 0 / 50%);
+    background-color: rgb(0 0 0 / 64%);
     width: 100%;
     height: 100%;
     position: absolute;
     left: 0;
     top: 0;
-	opacity: .7;
 }
 .counter .row.text-center.pt-80.pb-80 {
     position: relative;
     z-index: 99;
 }
 
+/* End Counter */
 
 /* Our Team */
 *{box-sizing: border-box;}
@@ -376,17 +348,17 @@ body {font-family: Arial, Helvetica, sans-serif;}
 
   /* The popup form - hidden by default */
   .form-popup {
-	display: none;
-	position: fixed;
-	top:100px;
-	right: 20px;
-	left: 260px;
-	z-index: 99;
-  }
+    display: none;
+    position: fixed;
+    top: 70px;
+    left: 456px;
+    z-index: 99;
+    transform: translate(50px, 100px);
+}
   
   /* Add styles to the form container */
   .form-container {
-	max-width: 800px;
+	max-width: 700px;
 	padding: 10px;
 	background-color: white;
 	text-align: center;
@@ -394,9 +366,6 @@ body {font-family: Arial, Helvetica, sans-serif;}
 
 
 /* Add a red background color to the cancel button */
-.form-container .cancel {
-  background-color: red;
-}
 
 /* Add some hover effects to buttons */
 .form-container .btn:hover, .open-button:hover {
